# bifrost-api

./: .dockerignore  .env.example  .gitignore  AUTH_FIX.md  AzuriteConfig  CLAUDE.md  COSMOS_MIGRATION_PLAN.md  DEBUG.md  DEVELOPMENT.md  Dockerfile  Dockerfile.api  Dockerfile.jobs  FINAL PUSH.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_STATUS.md  OPENAPI_FIX_STATUS.md  PROJECT.md  README.md  REFACTORING_STATUS.md  TESTING_REFACTOR_SPEC.md  TEST_STATUS.md  WORKFLOW_SIMPLIFICATION.md  alembic.ini  bifrost.py  check_all_tables.py  check_exec_structure.py  check_logs.py  check_recent_exec.py  coverage.json  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.new.yml  docker-compose.test.yml  docker-compose.testing.yml  docker-compose.yml  function_app.py  get-function-keys.sh  host.json  local.settings.example.json  package-lock.json  (+16 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.plans/: auth_security_review.md  execution_engine_review.md
alembic/: env.py
api/: .coveragerc  AUTH_CLEANUP_PLAN.md  AUTH_FINAL_SOLUTION.md  AUTH_REMOVAL_PLAN.md  CUSTOM_PACKAGES_TESTING.md  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.jobs  LINTING_AND_TYPE_CHECKING.md  NEXT_STEPS.md  PHASE_1_API_INTEGRATION_TESTS_SPEC.md  PHASE_2_REPOSITORY_TESTS_SPEC.md  PHASE_6A_IMPLEMENTATION_PLAN.md  PHASE_6A_OAUTH_FORMS_HANDLERS_SPEC.md  PHASE_6B_EXECUTION_CHECKLIST.md  PHASE_6B_IMPLEMENTATION_PLAN.md  PHASE_6B_ROLES_SECRETS_PERMISSIONS_HANDLERS_SPEC.md  PHASE_6C_CONFIG_WORKFLOWS_ORGS_HANDLERS_SPEC.md  ROADMAP_TO_75_PERCENT.md  TESTING.md  TESTING_PLAN.md  (+23 more)
(+1273 files in other folders)
